# gestronomy

./: .env.example  .gitignore  2027_AI_Restaurant_Management_Vision.html  404.html  BUG_REPORT.md  CNAME  Makefile  PLAN.md  ROLLBACK.md  SECURITY_REVIEW.md  UX_ACCEPTANCE.md  docker-compose.prod.yml  docker-compose.yml  impressum.html  index.html  manifest.json  render.yaml  walkthrough1123.md
backend/: .dockerignore  Dockerfile  PHASE4_TENANT_MIGRATION_PLAN.md  ROLLBACK_RUNBOOK.md  alembic.ini  migrate_master.py  migrate_menu_items.py  pyproject.toml  run_server.py  seed_data.py  seed_menu_reservations.py  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 2bf2efd05bb7_add_menu_reservations_billing_tables.py  3649d637c9a4_ux03_exception_workflow_fields.py  3e542e56b138_initial_schema.py  620206e756c2_ag01_service_autopilot_predictions.py  7a5db2f9da1f_refactor_vouchers_to_digital_code_system.py  83ccdefe48ab_phase3_menu_designer_signage.py  95069ca497e7_add_hms_models.py  9b4c1d2e7f10_phase4_add_restaurant_id_to_core_tables.py  9d372db4a5f1_ag02_revenue_control_tower.py  a94a1804451a_phase2_qr_ordering_vouchers_gift_cards.py  ab57cd3db3df_phase5_enforce_tenant_not_null_and_.py  b1c2d3e4f5a6_add_performance_indexes.py  (+5 more)
backend/app/: config.py  database.py  dependencies.py  landing_adapter.py  main.py
backend/app/auth/: models.py  (+4 more)
backend/data/: gastronovi_raw_items.json
backend/scripts/: import_gastronovi.py  mock_voicebooker.py  test_voucher_email.py  test_vouchers.py  update_tables.py
backend/tests/: conftest.py  test_agent_integration.py  test_config.py  test_health_smoke.py  test_tenant_isolation_api.py
(+299 files in other folders)
